# tuneup-alpha

./: .editorconfig  .gitattributes  .gitignore  ADMIN_MANUAL.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  LOGGING.md  Makefile  README.md  TODO.md  USER_MANUAL.md  VISUAL_IMPROVEMENTS.md  pyproject.toml
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml
config/: sample_config.yaml
src/tuneup_alpha/: __init__.py  cli.py  config.py  dns_lookup.py  dns_state.py  logging_config.py  models.py  nsupdate.py  tui.py  tui.tcss  tui_forms.py
tests/: test_cli.py  test_config_repo.py  test_dns_lookup.py  test_dns_state.py  test_logging.py  test_models.py  test_nsupdate.py  test_theme_persistence.py  test_tui.py  test_visual_improvements.py
