[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "tuneup-alpha"
version = "0.2.0"
description = "Dynamic DNS zone manager with a Textual TUI and nsupdate integration."
readme = "README.md"
authors = [{ name = "TuneUp Maintainers" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["dns", "nsupdate", "tui", "cli", "zone-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=0.58,<7.0",
    "typer>=0.12,<1.0",
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.7,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.scripts]
tuneup-alpha = "tuneup_alpha.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (needed for Typer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG005", "SIM116"]  # Allow unused arguments and if-chains in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

